--- a/final-project/styles/mobile.css
+++ b/final-project/styles/mobile.css
@@ -804,7 +804,7 @@ footer
 #contributors
 {
     overflow-y: auto;
-    max-height: 600px; 
+    max-height: 400px; 
     box-sizing: border-box;
     padding: 30px;
     margin: 20px 0;       
